Fix z-index while in modal

--- a/src/Gui/resources/scss/ui/_toast.scss
+++ b/src/Gui/resources/scss/ui/_toast.scss
@@ -25,3 +25,7 @@
         flex-direction: column-reverse;
     }
 }
+
+.modal-open .toast {
+    z-index: $zindex-modal + $zindex-toast;
+}
