--- a/src/Gui/resources/scss/ui/forms/_form-date.scss
+++ b/src/Gui/resources/scss/ui/forms/_form-date.scss
@@ -140,3 +140,7 @@
         }
     }
 }
+
+.modal-open .gui-calendar .dp-menu {
+    z-index: $zindex-modal + $zindex-dropdown;
+}
